add favicon and opengraph img

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/plexia-logo.ng" />
+    <link rel="icon" type="image/png" href="/plexia-favicon.png" />
+    <link rel="apple-touch-icon" href="/plexia-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plexia - Digital Marketing Excellence</title>
+    
+    <!-- OpenGraph / Social Media Meta Tags -->
+    <meta property="og:title" content="Plexia - Digital Marketing Excellence" />
+    <meta property="og:description" content="Modern digital marketing solutions with cutting-edge technology and creative design" />
+    <meta property="og:image" content="/plexia-mac-mockup.jpg" />
+    <meta property="og:url" content="https://your-website-url.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="/plexia-mac-mockup.jpg" />
     <!-- Fonts: preconnect and load stylesheet early to reduce flashes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
