--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <!-- OpenGraph / Social Media Meta Tags -->
     <meta property="og:title" content="Plexia - Digital Marketing Excellence" />
     <meta property="og:description" content="Modern digital marketing solutions with cutting-edge technology and creative design" />
-    <meta property="og:image" content="/plexia-mac-mockup.jpg" />
-    <meta property="og:url" content="https://your-website-url.com" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/AbdeljalilRajli/Plexia/main/public/plexia-mac-mockup.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://abdeljalilrajli.github.io/Plexia/" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/plexia-mac-mockup.jpg" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/AbdeljalilRajli/Plexia/main/public/plexia-mac-mockup.jpg" />
     <!-- Fonts: preconnect and load stylesheet early to reduce flashes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
